@@ -2,15 +2,15 @@ AC_INIT(libxml++/libxml++.h)
 
 #release versioning
 GENERIC_MAJOR_VERSION=2
-GENERIC_MINOR_VERSION=8
-GENERIC_MICRO_VERSION=0
+GENERIC_MINOR_VERSION=9
+GENERIC_MICRO_VERSION=1
 GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
 AC_SUBST(GENERIC_MAJOR_VERSION)
 AC_SUBST(GENERIC_MINOR_VERSION)
 AC_SUBST(GENERIC_VERSION)
 
 #shared library versioning
-GENERIC_LIBRARY_VERSION=2:1:0
+GENERIC_LIBRARY_VERSION=2:2:0
 #                       | | |
 #                +------+ | +---+
 #                |        |     |
@@ -62,6 +62,7 @@ AC_OUTPUT(
   examples/Makefile
     examples/dom_build/Makefile
     examples/dom_parser/Makefile
+    examples/dom_parser_raw/Makefile
     examples/dom_parse_entities/Makefile
     examples/dom_read_write/Makefile
     examples/dom_xpath/Makefile
