@@ -1,4 +1,4 @@
-SUBDIRS = dom_build dom_parser dom_parse_entities dom_read_write dom_xpath \
+SUBDIRS = dom_build dom_parser dom_parser_raw dom_parse_entities dom_read_write dom_xpath \
           sax_parser sax_parser_entities sax_exception sax_parser_build_dom \
           import_node textreader dtdvalidation
 
