@@ -1,0 +1,9 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+#Build the executable, but don't install it.
+noinst_PROGRAMS = example
+
+#List of source files needed to build the executable:
+example_SOURCES = main.cc
+
+EXTRA_DIST = example.xml example_invalid.xml example.dtd
