@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!--
+DTD for libxml++ example.
+-->
+
+<!ELEMENT example (examplechild)+ >
+
+<!ELEMENT examplechild (child_of_child)+ >
+<!ATTLIST examplechild
+  id	CDATA	#REQUIRED
+>
+
+<!ELEMENT child_of_child EMPTY >
+
